Name: wikilon
Version: 0.2
Synopsis: Software platform and IDE for Awelon project
Category: Awelon
Description:
 A wiki where every page describes a pure function, enabling flexible
 composition and computation of information. Use of software agents
 can extend dictionary applications to real world IO. The functions
 are expressed in Awelon Object code.
 .
 This toplevel project just builds wikilon executables.

Author: David Barbour
Homepage: http://github.com/dmbarbour/wikilon
Copyright: (c) 2014-2016 by David Barbour
license-file: LICENSE.txt
Stability: experimental
build-type: Simple
cabal-version: >= 1.20

Extra-source-files:
  README.md
  changelog.md

Source-repository head
  type: git
  location: http://github.com/dmbarbour/wikilon.git

Executable runABC
  hs-source-dirs: hsrc
  default-language: Haskell2010
  build-depends: base (>= 4.6 && < 5)
    , wikilon-model
    , bytestring
  main-is: RunABC.hs
  ghc-options: -auto-all -Wall -rtsopts -threaded

