name:                wikilon
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dmbarbour/wikilon#readme
license:             BSD3
license-file:        LICENSE
author:              David Barbour
maintainer:          dmbarbour@gmail.com
copyright:           2017 David Barbour
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
    Awelon
    Awelon.Syntax
    Awelon.Hash
    Awelon.CX
    Awelon.Dict
    Awelon.Dict.Format

    Wikilon
    Wikilon.CX
    Wikilon.DB
  build-depends:       base >= 4.7 && < 5
                     , containers (>= 0.5)
                     , bytestring, utf8-string, array, blake2
                     , lmdb
                     , filelock, filepath, directory
  default-language:    Haskell2010

executable wikilon-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wikilon
  default-language:    Haskell2010

test-suite wikilon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wikilon
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dmbarbour/wikilon


