Name: wikilon-abc
Version: 0.1
Synopsis: Awelon Bytecode and Values model used by Wikilon
Category: Awelon
Description:
  Awelon Bytecode (ABC) is a minimal, purely functional bytecode with 
  support for texts, numbers, and first class functions (blocks). ABC
  is streamable, i.e. we can drop code as we process it. Wikilon will
  model effects as messaging between abstract virtual machines. Each
  machine has a pure step function `(InMsg,State)→([OutMsg],State)`.
  .
  The main weakness of ABC is performance. Direct interpretation does
  too much allocation and GC. To help mitigate this, JIT compilation
  is highly appropriate. To model JIT compilation in Haskell, plugins
  are a viable possibility. To support plugins, ABC's description is
  separated from the primary wikilon program.
  
Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/wikilon

Package-Url: 
Copyright: (c) 2015 by David Barbour
License: BSD3
license-file: LICENSE.txt
Stability: experimental
build-type: Simple
cabal-version: >= 1.16.0.3

Source-repository head
  type: git
  location: http://github.com/dmbarbour/wikilon.git

Library
  hs-Source-Dirs: hsrc_lib
  default-language: Haskell2010
  Build-Depends: base (>= 4.6 && < 5)
    , vcache (>= 0.2.5)
    , utf8-string (>= 1)
    , bytestring (>= 0.10)
    , bytestring-builder
    , array
    , lz4 (>= 0.2.3)

  Exposed-Modules:

    Wikilon.ABC
    Wikilon.Eval

    Awelon.ABC
    Awelon.Base16
    Awelon.Text
    Awelon.Eval

  Other-Modules:
  
  ghc-options: -Wall -auto-all

