Name: wikilon-abc
Version: 0.1
Synopsis: Awelon Bytecode, Evaluation, and Values models used in Wikilon
Category: Awelon
Description:
  Awelon Bytecode (ABC) is a minimal, purely functional bytecode with 
  support for texts, numbers, and first class functions (blocks). ABC
  is streamable, i.e. we can drop code as we process it. This package
  contains a reference description for ABC and a relatively performant
  variant for practical use.
  
Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/wikilon

Package-Url: 
Copyright: (c) 2015 by David Barbour
License: BSD3
license-file: LICENSE.txt
Stability: experimental
build-type: Simple
cabal-version: >= 1.16.0.3

Source-repository head
  type: git
  location: http://github.com/dmbarbour/wikilon.git

Library
  hs-Source-Dirs: hsrc_lib
  default-language: Haskell2010
  Build-Depends: base (>= 4.6 && < 5)
    , utf8-string (>= 1)
    , bytestring (>= 0.10)
    , bytestring-builder
    , array

  Exposed-Modules:

    Wikilon.ABC
    Wikilon.ABC.Code
    Wikilon.ABC.Value
    Wikilon.ABC.EncVal
    Wikilon.ABC.Eval

    -- TODO
    -- Wikilon.ABC.Simplify
    -- Wikilon.ABC.Convert

    Awelon.ABC
    Awelon.ABC.Eval
    Awelon.Base16
    Awelon.Text

  Other-Modules:

    Wikilon.ABC.Util
  
  ghc-options: -Wall -auto-all

