Name: wikilon-db
Version: 0.1
Synopsis: a history-preserving, scalable key-value database
Category: Awelon, Database
Description:
  Keeping some history is useful for analytics, retroactive testing,
  and recovery from vandalism or mistakes. But history can also grow
  into a space hog. A good balance is to keep a limited number of
  samples of history. This can be done with windowing (keep the last
  K samples) and logarithmic approaches (samples distributed further
  in time the further back you look).
  
  This project builds both windowing and logarithmic history above a
  transactional key-value database. Developers can access historical 
  snapshots of the database with structure sharing and copy-on-write
  techniques. 
  
  Wikilon database builds above Berkeley DB. At the moment, I have no
  plans to abstract the backend storage model.
  
Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/wikilon

Package-Url: 
Copyright: (c) 2014 by David Barbour
License: BSD3
license-file: LICENSE.txt
Stability: experimental
build-type: Simple
cabal-version: >= 1.16.0.3

Source-repository head
  type: git
  location: http://github.com/dmbarbour/wikilon.git

Library
  hs-Source-Dirs: hsrc_lib
  default-language: Haskell2010
  Build-Depends: base (>= 4.6 && < 5)
    , BerkeleyDB (>= 0.8.7)

    , cryptohash (>= 0.11)
    , bytestring, byteable

    , time (>= 1.4)
    , old-locale
    , Decimal (>= 0.4)


  Exposed-Modules:

    Wikilon.Time

  Other-Modules:
  
  ghc-options: -Wall -auto-all

