Name: wikilon-model
Version: 0.1
Synopsis: Wikilon events and views
Category: Awelon
Description:
  Wikilon is a web service for creating and maintaining a collection 
  of functions for Awelon project, building above a purely functional
  bytecode. This module focuses on just the primary modeling aspects:
  update events and views, and integration of these with external
  systems.
  .
  A goal of this module is to hide the persistence layer entirely.
  
Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/wikilon

Package-Url: 
Copyright: (c) 2014-2015 by David Barbour
License: BSD3
license-file: LICENSE.txt
Stability: experimental
build-type: Simple
cabal-version: >= 1.20

Extra-source-files:
    README.md 
    changelog.md

Source-repository head
  type: git
  location: http://github.com/dmbarbour/wikilon.git

Library
  hs-Source-Dirs: hsrc_lib
  default-language: Haskell2010
  Build-Depends: base (>= 4.7 && < 5)
    , wikilon-abc
    , mtl

    -- TODO: eventually update time requirement to 1.5
    , time, old-locale
    , Decimal (>= 0.4)
    , bytestring (>= 0.10.4)
    , utf8-string (>= 1)
    , bytestring-builder
    , array
    , containers (>= 0.5)
    , cryptohash (>= 0.11)
    , byteable
    , zlib

  Exposed-Modules:

    Wikilon.Time
    Wikilon.Events
    Wikilon.Model

    Wikilon.Dict
    Wikilon.Dict.Word
    Wikilon.Dict.Token
    Wikilon.Dict.Text

    Wikilon.SecureHash


  Other-Modules:
 
  ghc-options: -Wall -auto-all

