Name: wikilon-model
Version: 0.1
Synopsis: Wikilon interface and database
Category: Awelon
Description:
  Wikilon is a wiki-inspired development environment for Awelon project.
  Wikilon hosts Awelon Object dictionaries, closed sets of words with
  staged, acyclic, purely functional definitions. AO dictionaries will
  host ad-hoc content such as wikis, forums, spreadsheets, databases,
  and documents. 
  .
  This wikilon-model module focuses on providing the interface and 
  backend database for Wikilon. For now, there are no plans for any
  backend other than VCache.
  
Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/wikilon

Package-Url: 
Copyright: (c) 2015 by David Barbour
License: BSD3
license-file: LICENSE.txt
Stability: experimental
build-type: Simple
cabal-version: >= 1.20

Extra-source-files:
    README.md 
    changelog.md

Source-repository head
  type: git
  location: http://github.com/dmbarbour/wikilon.git

Library
  hs-source-dirs: hsrc
  default-language: Haskell2010
  build-depends: base (>= 4.7 && < 5)
    , vcache (>= 0.2.6)
    , vcache-trie (>= 0.2.3)

    , bytestring (>= 0.10.4)
    , utf8-string
    , containers (>= 0.5)
    , array
    , Decimal

    , stm
    , mtl


  Exposed-Modules:
    Wikilon
    Wikilon.Model

    Wikilon.Dict
    Wikilon.AODict
    Wikilon.AODef
    Wikilon.Word
    Wikilon.Token
    Wikilon.Text

    Wikilon.ABC.Pure
    Wikilon.Claw

    Wikilon.ABC


  Other-Modules:
    Data.VCache.LoB
     
  ghc-options: -auto-all -Wall 
