Name: wikilon-runtime
Version: 0.1
Synopsis: Wikilon Runtime
Category: Awelon
Description:
  The Wikilon runtime is a high performance runtime for Awelon Bytecode with
  support for larger-than-memory values and persistence. It is written in an
  ad-hoc mix of Haskell and C, with intention to leverage LLVM compilation.
  Large values and persistence are backed by LMDB. This module includes just
  the runtime aspects, any private structure.
  
Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/wikilon

Package-Url: 
Copyright: (c) 2015 by David Barbour
License: BSD3
license-file: LICENSE.txt 
license-files: 
    csrc/lmdb/LICENSE 
    csrc/lmdb/COPYRIGHT
Stability: experimental
build-type: Simple
cabal-version: >= 1.20

Extra-source-files:
    README.md 
    changelog.md
    csrc/lmdb/lmdb.h
    csrc/lmdb/midl.h
    csrc/lmdb/mdb.c
    csrc/lmdb/midl.c
    csrc/murmur3/murmur3.h
    csrc/murmur3/murmur3.c
    csrc/wikilon-runtime.h
    csrc/wikrt.c
    csrc/Makefile

Source-repository head
  type: git
  location: http://github.com/dmbarbour/wikilon.git

Library
  hs-source-dirs: hsrc
  default-language: Haskell2010
  build-tools: hsc2hs
  build-depends: base (>= 4.7 && < 5)
    , bytestring (>= 0.10.4)
  Exposed-Modules:
    Wikilon.Runtime
  Other-Modules:

  ghc-options: -auto-all -Wall 

  c-sources:
    csrc/lmdb/mdb.c
    csrc/lmdb/midl.c
    csrc/murmur3/murmur3.c
    csrc/wikrt.c
  includes:
    csrc/lmdb/lmdb.h
    csrc/lmdb/midl.h
    csrc/murmur3/murmur3.h
    csrc/wikilon-runtime.h
  include-dirs: 
    csrc/lmdb
    csrc/murmur3
    csrc/
  cc-options: -W -Wall -O2 -g -pthread -fPIC
  extra-libraries: pthread c
    

