Name: wikilon-wai
Version: 0.1
Synopsis: HTTP Interfaces for Wikilon
Category: Awelon, Application, Application Server
Description:
  Wikilon aims to support a multi-user programmable wiki, development
  environment, and web application platform. While a lot of logic should
  be shifted into the Awelon Object dictionaries, wikilon-wai provides a
  bootstrap environment at the very least.
  
Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/wikilon

Package-Url: 
Copyright: (c) 2014-2015 by David Barbour
License: BSD3
license-file: LICENSE.txt
Stability: experimental
build-type: Simple
cabal-version: >= 1.20

Extra-source-files:
    README.md 
    changelog.md

Source-repository head
  type: git
  location: http://github.com/dmbarbour/wikilon.git

Library
  hs-Source-Dirs: hsrc_lib
  default-language: Haskell2010
  Build-Depends: base (>= 4.7 && < 5)
    , vcache (>= 0.2.5)
    , vcache-trie (>= 0.1.1)
    , wikilon-abc
    , wikilon-model

    , mtl

    , Decimal (>= 0.4)
    , bytestring (>= 0.10.4)
    , utf8-string (>= 1)
    , bytestring-builder
    , array
    , containers (>= 0.5)
    , wai (>= 3.0)
    , wai-extra
    , wai-route
    , http-types (>= 0.8.6)
    , http-media (>= 0.6)
    , blaze-html (>= 0.8)
    -- , websockets (>= 0.9)
    -- , wai-websockets
    , cryptohash (>= 0.11)
    , byteable
    , entropy
    , zlib
    , diff3 (>= 0.2)
    , Diff (>= 0.3)

  Exposed-Modules:

    Wikilon.WAI.Types
    Wikilon.WAI.Utils
    Wikilon.WAI.URL
    Wikilon.WAI.Routes
    Wikilon.WAI.RecvFormPost
    Wikilon.WAI.RegexPatterns
    Wikilon.WAI.MediaType
    Wikilon.WAI.Conflicts
    Wikilon.WAI.DefaultCSS
    Wikilon.WAI.ClawUtils
    Wikilon.WAI.Pages.AODict
    Wikilon.WAI.Pages.AODictEdit
    Wikilon.WAI.Pages.ClawCode
    Wikilon.WAI.Pages.ClawEdit
    Wikilon.WAI.Pages.DictList
    Wikilon.WAI.Pages.Dict
    Wikilon.WAI.Pages.DictWord
    Wikilon.WAI.Pages.DictWord.Rename
    Wikilon.WAI.Pages.DictWord.AODef
    Wikilon.WAI.Pages.DictWord.ClawDef
    Wikilon.WAI.Pages.REPL
    Wikilon.WAI.Pages.FrontPage
    Wikilon.WAI.Pages.Admin
    Wikilon.WAI.Pages
    Wikilon.WAI

  Other-Modules:
  
  ghc-options: -Wall -auto-all

