Name: wikilon-model
Version: 0.2
Synopsis: Wikilon Library
Category: Awelon
Description:
  Wikilon is a wiki-inspired runtime and development environment for 
  Awelon project. It includes not just evaluators, but also models a
  database for persistent dictionaries. Awelon language has a simple
  Forth-like syntax and acyclic definitions, but projectional editing
  can offer a rich user interface to the program.
  
Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/wikilon

Package-Url: 
Copyright: (c) 2015-2017 by David Barbour
License: BSD3
license-file: LICENSE.txt
Stability: experimental
build-type: Simple
cabal-version: >= 1.20

Extra-source-files:
    README.md 
    changelog.md

Source-repository head
  type: git
  location: http://github.com/dmbarbour/wikilon.git

Library
  build-tools: hsc2hs
  hs-source-dirs: hsrc
  default-language: Haskell2010
  build-depends: base (>= 4.7 && < 5)
    , vcache (== 0.2.6)
    , vcache-trie (>= 0.2.4)

    , bytestring (>= 0.10.4)
    , utf8-string
    , containers (>= 0.5)
    , array
    , time, old-locale
    , Decimal
    , cryptohash (>= 0.11), byteable
    , snappy (>= 0.2)

    , stm
    , mtl


  Exposed-Modules:
    Wikilon
    Wikilon.Model
    Wikilon.Model.Action
    Wikilon.Model.Result

    Wikilon.Dict
    Wikilon.AODict
    Wikilon.AODef
    Wikilon.Word
    Wikilon.Token
    Wikilon.Text


    Wikilon.Dict.Set
    Wikilon.Dict.RLU
    Wikilon.Dict.Head
    Wikilon.Dict.Hist
    Wikilon.Dict.RenameWord

    Wikilon.ABC
    Wikilon.ABC.Pure
    Wikilon.ABC.Fast
    Wikilon.ABC.Eval

    Wikilon.Base16


    -- todo: figure out caching
    -- Wikilon.Dict.PLU
    -- Wikilon.Hash

    -- todo: figure out authority
    -- Wikilon.Auth

    Wikilon.Claw

    -- Wikilon.Clock
    Wikilon.Time

    Wikilon.Test.LoadDict

    -- Wikilon.Runtime.H

  Other-Modules:

    Binary.Utils

  includes: wikilon-runtime.h
  extra-libraries: wikilon-runtime
  ghc-options: -auto-all -Wall 

